Fixing video overflow

--- a/wp-content/themes/titeblog/sass/_custom.scss
+++ b/wp-content/themes/titeblog/sass/_custom.scss
@@ -44,8 +44,12 @@ h1.understated {
     font-size: .875rem;
 }
 
+/* Single pages/posts */
 .tags p {
     font-family: $font-family-sans-serif;
+}
+article.post iframe {
+    max-width:100%;
 }
 
 /* Pagination */
